@@ -1,3 +1,8 @@
+2011-02-15 Javier Lanz <javier.lanz@artica.es>
+	* godmode/users/configure_user.php: Truncated group name on user detail
+	editor
+	* godmode/groups/group_list.php: Changed ACL checkings
+
 2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
 
 	Merged bugfix from trunk
